--- a/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
+++ b/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
@@ -33,7 +33,7 @@
         {
 
         <div class="col-md-3 mb-4">
-            <div class="card h-100" style="width: 100%;">
+            <div class="card h-100 img-zoom" style="width: 100%;">
                 @if (item.Image != null)
                 {
                     <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
