--- a/AccessoriesApp.Web/Views/Home/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Home/Index.cshtml
@@ -3,12 +3,12 @@
 }
 
 <!-- Hero Section -->
-<div class="container-fluid bg-gradient bg-info text-white py-3 mt-3 rounded-3 shadow " >
+<div class="container-fluid bg-gradient bg-info text-white py-3 mt-5 rounded-3 shadow " >
     <div class="row justify-content-center">
         <div class="col-md-8 text-center">
             <h1 class="display-4 fw-bold">Welcome to Order Accessories</h1>
             <p class="lead">Discover and order your favorite accessory with ease</p>
-            <a asp-area="Identity" asp-page="/Account/Register" class="btn  btn-lg mt-2 shadow bg-primary text-white">
+            <a asp-area="Identity" asp-page="/Account/Register" class="btn  btn-lg mt-2 shadow bg-primary text-white img-zoom">
                 <i class="bi bi-box-arrow-in-right me-2 "></i>Start Ordering Accessories
             </a>
         </div>
